--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,14 +1,28 @@
+<!--***************************************************************************
+//     Application: Email Application
+//     Author:      Joshua McClure(jmcclu23)
+//     Date:        2017-04-23
+//     File:        email.ejs
+//     Description: Displays encrypted email and allows input /                  passpharse to decyprt
+//*****************************************************************************
+//     History
+//*****************************************************************************
+// Date         Version     User       Description
+//2017-04-23      1.0     jmcclu23     Initial Commit, new program
+-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title><%= user.local.name %> Email Application</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <div class="container">
       <div class="page-header text-center">
         <h1>Welcome, <%= user.local.name %></h1>
-        <a href="/profile" class="btn btn-default btn-sm">Inbox</a>
+        <a href="/inbox" class="btn btn-default btn-sm">Inbox</a>
+        <a href="/send" class="btn btn-default btn-sm">New Email</a>
         <a href="/logout" class="btn btn-default btn-sm">Logout</a>
       </div>
     </div>
@@ -22,7 +36,8 @@
           <% var encryptedString = new String() %>
           <% tempArray = tempString.split(":") %>
         <% } %>
-        <h3>Inbox</h3>
+        <p>Account: <%= user.local.email %> </p></br>
+        <h3>Viewing Encrypted Email</h3>
         <p>To: <%=user.local.email %></p>
         <p>From: <%= from %></p>
         <p>Subject: <%= subject.replace(/&&&/g,':').replace(/%%%/g, ' ') %> </p>
