--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,20 @@
+<!--***************************************************************************
+//     Application: Email Application
+//     Author:      Joshua McClure(jmcclu23)
+//     Date:        2017-04-23
+//     File:        index.ejs
+//     Description: Displays index with links to login or signup
+//*****************************************************************************
+//     History
+//*****************************************************************************
+// Date         Version     User       Description
+//2017-04-23      1.0     jmcclu23     Initial Commit, new program
+-->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Emaill Application</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
