--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,19 @@
+<!--***************************************************************************
+//     Application: Email Application
+//     Author:      Joshua McClure(jmcclu23)
+//     Date:        2017-04-23
+//     File:        login.ejs
+//     Description: Displays login form
+//*****************************************************************************
+//     History
+//*****************************************************************************
+// Date         Version     User       Description
+//2017-04-23      1.0     jmcclu23     Initial Commit, new program
+-->
 <!doctype html>
 <html>
   <head>
-    <title>Node Authentication</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <style>
