--- a/views/decryptedemail.ejs
+++ b/views/decryptedemail.ejs
@@ -1,19 +1,35 @@
+<!--***************************************************************************
+//     Application: Email Application
+//     Author:      Joshua McClure(jmcclu23)
+//     Date:        2017-04-23
+//     File:        decryptedemail.ejs
+//     Description: Displays Decrypted email to read
+//*****************************************************************************
+//     History
+//*****************************************************************************
+// Date         Version     User       Description
+//2017-04-23      1.0     jmcclu23     Initial Commit, new program
+-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title><%= user.local.name %> Email Application</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <div class="container">
       <div class="page-header text-center">
         <h1>Welcome, <%= user.local.name %></h1>
-        <a href="/profile" class="btn btn-default btn-sm">Inbox</a>
+        <a href="/inbox" class="btn btn-default btn-sm">Inbox</a>
+        <a href="/send" class="btn btn-default btn-sm">New Email</a>
         <a href="/logout" class="btn btn-default btn-sm">Logout</a>
       </div>
     </div>
     <div class="col-sm-12">
       <div class="well">
+        <p>Account: <%= user.local.email %> </p></br>
+        <h3>Viewing Decrypted Email</h3></br>
         <form action="/reply" method="post">
           <p>To: <%= from %>
             <input type="hidden" name="toID" value = <%= from %>>
