--- a/views/inbox.ejs
+++ b/views/inbox.ejs
@@ -1,7 +1,20 @@
+<!--***************************************************************************
+//     Application: Email Application
+//     Author:      Joshua McClure(jmcclu23)
+//     Date:        2017-04-23
+//     File:        inbox.ejs
+//     Description: Displays inbox
+//*****************************************************************************
+//     History
+//*****************************************************************************
+// Date         Version     User       Description
+//2017-04-23      1.0     jmcclu23     Initial Commit, new program
+-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title><%= user.local.name %> Email Application</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
     <style>
       table { border-collapse: collapse;
@@ -16,13 +29,14 @@
   <body>
     <div class="container">
       <div class="page-header text-center">
-        <h1>Welcome, <%= user.local.name %></h1>
+        <h2>Welcome, <%= user.local.name %></h2>
+        <a href="/send" class="btn btn-default btn-sm">New Email</a>
         <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-        <a href="/send" class="btn btn-default">Send</a>
       </div>
     </div>
     <div class="col-sm-12">
       <div class="well">
+        <p>Account: <%= user.local.email %> </p></br>
         <h3>Inbox</h3>
         <p>
           <table class="table table-striped table-hover">
@@ -32,8 +46,6 @@
               <% array = readFile(user.local.email,emailPath) %>
               <% var tempString = array[0] %>
               <% if(array.length > 0 && tempString != "") { %>
-                <p>Inbox size: </p><%= array.length %>
-                <%= user.local.email %>
                 <th>From</th><th>Subject</th><th></th>
             </tr>
               <% for(i=0; i<array.length; i++) { %>
@@ -50,6 +62,13 @@
                   <input type="hidden" name="subject" value=<%= tempArray[1].replace(/:/g,'&&&').replace(/ /g, '%%%') %>>
                   <input type="hidden" name="emailID" value =<%= tempArray[2] %>>
                   <input type="submit" value = "Open">
+                </form></br>
+                <form action="/delete" method="post">
+                  <input type="hidden" name="toEmail" value=<%= user.local.email %>>
+                  <input type="hidden" name="fromEmail" value=<%= tempArray[0] %>>
+                  <input type="hidden" name="subject" value=<%= tempArray[1].replace(/:/g,'&&&').replace(/ /g, '%%%') %>>
+                  <input type="hidden" name="emailID" value =<%= tempArray[2] %>>
+                  <input type="submit" value = "delete">
                 </form>
               </td>
             </tr>
