--- a/views/send.ejs
+++ b/views/send.ejs
@@ -1,21 +1,44 @@
+<!--***************************************************************************
+//     Application: Email Application
+//     Author:      Joshua McClure(jmcclu23)
+//     Date:        2017-04-23
+//     File:        send.ejs
+//     Description: Displays form for new email
+//*****************************************************************************
+//     History
+//*****************************************************************************
+// Date         Version     User       Description
+//2017-04-23      1.0     jmcclu23     Initial Commit, new program
+-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title><%= user.local.name %> Email Application</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <div class="container">
       <div class="page-header text-center">
         <h1>Welcome, <%= user.local.name %></h1>
-        <a href="/profile" class="btn btn-default btn-sm">Inbox</a>
+        <a href="/inbox" class="btn btn-default btn-sm">Inbox</a>
         <a href="/logout" class="btn btn-default btn-sm">Logout</a>
       </div>
     </div>
     <div class="col-sm-12">
       <div class="well">
+        <p>Account: <%= user.local.email %> </p></br>
+        <h3>Compose Email</h3></br>
+        <% var array = readUsers(); %>
+        <% console.log(array.toString()) %>
         <form action="/send" method="post">
-          <p>To:  <input type="text" name="toID"></p></br>
+          <p>To:  <select name ="toID">
+          <% for ( var i = 0; i < array.length; i++ ){ %>
+          <option name = "toID" value=<%= array[i] %>> <%= array[i]%> </option>
+            <%= i %>
+          </option>
+          <% } %>
+          </select></p></br>
           <p>From:
             <input type="text" name="fromID" value = <%= user.local.email %>
               readonly></p></br>
